--- a/Task-Board/style.css
+++ b/Task-Board/style.css
@@ -41,9 +41,10 @@ body {
 }
 
 .container {
-	width: 1000px;
+	width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+	padding: 0 20px 20px 20px;
     gap: 20px;
 }
 
@@ -111,7 +112,9 @@ input {
 .site-body {
 	position: absolute;
 	top: 100px;
-	margin-left: 50px;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
 }
 
 .card {
